@@ -3,8 +3,6 @@
 
 * ROW KEY FORMAT should support different hash types (md5, etc) when KijiSchema does..
 
-* Implement: CREATE TABLE .. USING n REGIONS (WITH lg_clause...)
-
 * When 'enabled' is real:
 ** support ALTER TABLE ENABLE/DISABLE FAMILY/COLUMN/LOCALITY GROUP for the enabled flag.
 ** DESCRIBE should only show enabled data, unless extended is true.
